--- a/SistemaAlquilerLibros/CapaEntidades/CapaEntidades.csproj
+++ b/SistemaAlquilerLibros/CapaEntidades/CapaEntidades.csproj
@@ -41,15 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClasesPersonalizadas\AutorLibroListar.cs" />
     <Compile Include="ClasesPersonalizadas\LibroListar.cs" />
+    <Compile Include="ClasesPersonalizadas\PrestamoLibroListar.cs" />
     <Compile Include="ClasesPersonalizadas\PrestamoListar.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Gestion\Autor.cs" />
+    <Compile Include="Gestion\AutorLibro.cs" />
     <Compile Include="Gestion\Categoria.cs" />
     <Compile Include="Gestion\Editorial.cs" />
     <Compile Include="Gestion\Estudiante.cs" />
     <Compile Include="Gestion\Libro.cs" />
     <Compile Include="Gestion\Prestamo.cs" />
+    <Compile Include="Gestion\PrestamoLibro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
