--- a/SistemaAlquilerLibros/CapaDatos/CapaDatos.csproj
+++ b/SistemaAlquilerLibros/CapaDatos/CapaDatos.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Gestion\CategoriaCD.cs" />
     <Compile Include="Gestion\EditorialCD.cs" />
     <Compile Include="Gestion\EstudianteCD.cs" />
+    <Compile Include="Gestion\HistorialBajaCD.cs" />
     <Compile Include="Gestion\LibroCD.cs" />
     <Compile Include="Gestion\PrestamoCD.cs" />
     <Compile Include="Gestion\PrestamoLibroCD.cs" />
