--- a/SistemaAlquilerLibros/CapaEntidades/CapaEntidades.csproj
+++ b/SistemaAlquilerLibros/CapaEntidades/CapaEntidades.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="ClasesPersonalizadas\AutorLibroListar.cs" />
     <Compile Include="ClasesPersonalizadas\HistorialBajaListar.cs" />
+    <Compile Include="ClasesPersonalizadas\KardexListar.cs" />
+    <Compile Include="ClasesPersonalizadas\Libro4Columnas.cs" />
     <Compile Include="ClasesPersonalizadas\LibroListar.cs" />
     <Compile Include="ClasesPersonalizadas\PrestamoLibroListar.cs" />
     <Compile Include="ClasesPersonalizadas\PrestamoListar.cs" />
@@ -53,6 +55,7 @@
     <Compile Include="Gestion\Editorial.cs" />
     <Compile Include="Gestion\Estudiante.cs" />
     <Compile Include="Gestion\HistorialBaja.cs" />
+    <Compile Include="Gestion\Kardex.cs" />
     <Compile Include="Gestion\Libro.cs" />
     <Compile Include="Gestion\Prestamo.cs" />
     <Compile Include="Gestion\PrestamoLibro.cs" />
